src/test/ui/parser/issues/issue-20616-4.stderr
error: expected one of `>`, a const expression, lifetime, or type, found `,`
  --> $DIR/issue-20616-4.rs:16:34
   |
LL | type Type_4<T> = Type_1_<'static,, T>;
   |                                  ^ expected one of `>`, a const expression, lifetime, or type

error: aborting due to previous error

